syntax="proto3";

package book;

import "common/common.proto";

option go_package="github.com/Zzocker/book-labs/protos/book";

message CreateBookRequest{
    string ISBN=1;
    string Name=2;
    repeated string Authors=3;
    bytes FrontCover=4;
    bytes BackCover=5;
}

message Book{
    string ISBN=1;
    string Name=2;
    repeated string Authors=3;
    string Owner=4;
    string CurrentOwner=5;
}

message ISBNRequest{
    string ISBN=1;
}

message BookCover{
    bytes Front=1;
    bytes Back=2;
}

service BookService{
    rpc CreateBook(CreateBookRequest) returns (common.EmptyResponse);
    rpc GetBook(ISBNRequest) returns (Book);
    rpc UpdateBook(CreateBookRequest) returns (Book);
    rpc DeleteBook(ISBNRequest) returns (common.EmptyResponse);
    rpc GetBookPic(ISBNRequest) returns (BookCover);
}